--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.5e093.js" charset="utf-8"></script>
+<script src="src/settings.dacdb.js" charset="utf-8"></script>
 
-<script src="main.d30a7.js" charset="utf-8"></script>
+<script src="main.52e24.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
